test/fail/int_pack_variant00.v3
//@execute 0=3; 1=1
// FUTURE: iN.pack/unpack of a variant ROOT is rejected by the type checker,
// because no bits are reserved for the case tag (PackingUtils.flatPackingWidth).
// The individual case types T.A and T.B pack fine, since each denotes exactly
// one case; only the root T, where the case is not statically known, cannot.
// If packing ever learns to reserve tag bits, this should work and this test
// should move to test/variants/.
type T { case A(x: u4); case B(y: u4); }
def main(a: int) -> int {
	def p = u8.pack<T>(T.B(3));
	def u = u8.unpack<T>(p);
	match (a) {
		0 => match (u) { A(x) => return -1; B(y) => return int.view(y); }
		1 => return if(u == T.B(3), 1, 0);
		_ => return -99;
	}
}
